RESOLVED FIXED251890
CVE-2023-32435 Fixup air pointer args if they are not valid in BBQ
https://bugs.webkit.org/show_bug.cgi?id=251890
Summary Fixup air pointer args if they are not valid in BBQ
Justin Michaud
Reported 2023-02-07 16:04:42 PST
Fixup air pointer args if they are not valid in BBQ
Attachments
Justin Michaud
Comment 1 2023-02-07 16:04:51 PST
Justin Michaud
Comment 2 2023-02-07 16:11:01 PST
EWS
Comment 3 2023-02-08 14:43:15 PST
Committed 260038@main (50c7aaec2f53): <https://commits.webkit.org/260038@main> Reviewed commits have been landed. Closing PR #9784 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.