Cherry-pick 50c7aaec2f53. rdar://problem/110417987

Fixup air pointer args if they are not valid in BBQ
    https://bugs.webkit.org/show_bug.cgi?id=251890
    rdar://105079565

    Reviewed by Mark Lam and Yusuke Suzuki.

    We are not fixing up air args if their offsets don't fit into the instruction
    in a few cases.

    Here are some examples:

    MoveDouble 28480(%sp), %q16 ; too big
    MoveVector 248(%sp), %q16 ; not 16-byte aligned

    Let's fix up these arguments. We also fix a missing validation check
    when parsing exception tags exposed by this test.

    * Source/JavaScriptCore/wasm/WasmAirIRGenerator64.cpp:
    (JSC::Wasm::AirIRGenerator64::addReturn):
    * Source/JavaScriptCore/wasm/WasmAirIRGeneratorBase.h:
    (JSC::Wasm::AirIRGeneratorBase::emitPatchpoint):

    oops

    Canonical link: https://commits.webkit.org/260038@main

Canonical link: https://commits.webkit.org/245886.878@safari-7613.4.1.0-branch